Feat.(app-module): add sidenav for filters

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
     <header>
-        <app-header (burgerClicked)="show()"></app-header>
+        <app-header (burgerClicked)="showNav()"></app-header>
     </header>
     <main>
         <div id="sidebar">
