--- a/src/app/books/components/filters/filters.component.html
+++ b/src/app/books/components/filters/filters.component.html
@@ -1,110 +1,123 @@
-<form [formGroup]="filtersForm" (ngSubmit)="applyFilters()">
-  <mat-form-field appearance="fill">
-    <mat-label>Genre filters</mat-label>
-    <mat-select multiple formControlName="genres">
-      <mat-option *ngFor="let genre of genres" [value]="genre.name">
-        {{ genre.name }}</mat-option
-      >
-    </mat-select>
-  </mat-form-field>
+<mat-drawer-container class="example-container">
+  <mat-drawer class="example-sidenav" mode="side" position="end">
+    <form [formGroup]="filtersForm" (ngSubmit)="applyFilters()">
+      <mat-form-field appearance="fill">
+        <mat-label>Genre filters</mat-label>
+        <mat-select multiple formControlName="genres">
+          <mat-option *ngFor="let genre of genres" [value]="genre.name">
+            {{ genre.name }}</mat-option
+          >
+        </mat-select>
+      </mat-form-field>
 
-  <div formGroupName="prices">
-    <mat-form-field class="example-full-width">
-      <mat-label>Price from</mat-label>
-      <input type="number" matInput formControlName="minPrice" />
-      <mat-error
-        *ngIf="filtersForm.get('prices').get('minPrice').hasError('min')"
-      >
-        Price could not be a negative
-      </mat-error>
-      <mat-error
-        *ngIf="filtersForm.get('prices').get('minPrice').hasError('priceError')"
-      >
-        Minimal price could not be biggest than maximal
-      </mat-error>
-    </mat-form-field>
+      <div formGroupName="prices">
+        <mat-form-field class="example-full-width">
+          <mat-label>Price from</mat-label>
+          <input type="number" matInput formControlName="minPrice" />
+          <mat-error
+            *ngIf="filtersForm.get('prices').get('minPrice').hasError('min')"
+          >
+            Price could not be a negative
+          </mat-error>
+          <mat-error
+            *ngIf="
+              filtersForm.get('prices').get('minPrice').hasError('priceError')
+            "
+          >
+            Minimal price could not be biggest than maximal
+          </mat-error>
+        </mat-form-field>
 
-    <mat-form-field class="example-full-width">
-      <mat-label>Price to</mat-label>
-      <input type="number" matInput formControlName="maxPrice" />
-      <mat-error
-        *ngIf="filtersForm.get('prices').get('maxPrice').hasError('min')"
-      >
-        Price could not be a negative
-      </mat-error>
-    </mat-form-field>
-  </div>
+        <mat-form-field class="example-full-width">
+          <mat-label>Price to</mat-label>
+          <input type="number" matInput formControlName="maxPrice" />
+          <mat-error
+            *ngIf="filtersForm.get('prices').get('maxPrice').hasError('min')"
+          >
+            Price could not be a negative
+          </mat-error>
+        </mat-form-field>
+      </div>
 
-  <div formGroupName="releases">
-    <mat-form-field color="accent" appearance="fill">
-      <mat-label>Release date from</mat-label>
-      <input
-        matInput
-        [matDatepicker]="pickerFrom"
-        formControlName="releaseFrom"
-      />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="pickerFrom"
-      ></mat-datepicker-toggle>
-      <mat-datepicker #pickerFrom startView="multi-year"></mat-datepicker>
-      <mat-error
-        *ngIf="
-          filtersForm
-            .get('releases')
-            .get('releaseFrom')
-            .hasError('releaseError')
-        "
-      >
-        First release date could not be biggest than second
-      </mat-error>
-      <mat-error
-        *ngIf="
-          filtersForm
-            .get('releases')
-            .get('releaseFrom')
-            .hasError('matDatepickerParse')
-        "
-      >
-        Date must be in format: YYYY-MM-DD
-      </mat-error>
-    </mat-form-field>
+      <div formGroupName="releases">
+        <mat-form-field color="accent" appearance="fill">
+          <mat-label>Release date from</mat-label>
+          <input
+            matInput
+            [matDatepicker]="pickerFrom"
+            formControlName="releaseFrom"
+          />
+          <mat-datepicker-toggle
+            matSuffix
+            [for]="pickerFrom"
+          ></mat-datepicker-toggle>
+          <mat-datepicker #pickerFrom startView="multi-year"></mat-datepicker>
+          <mat-error
+            *ngIf="
+              filtersForm
+                .get('releases')
+                .get('releaseFrom')
+                .hasError('releaseError')
+            "
+          >
+            First release date could not be biggest than second
+          </mat-error>
+          <mat-error
+            *ngIf="
+              filtersForm
+                .get('releases')
+                .get('releaseFrom')
+                .hasError('matDatepickerParse')
+            "
+          >
+            Date must be in format: YYYY-MM-DD
+          </mat-error>
+        </mat-form-field>
 
-    <mat-form-field color="accent" appearance="fill">
-      <mat-label>Release date to</mat-label>
-      <input matInput [matDatepicker]="pickerTo" formControlName="releaseTo" />
-      <mat-datepicker-toggle matSuffix [for]="pickerTo"></mat-datepicker-toggle>
-      <mat-datepicker #pickerTo startView="multi-year"></mat-datepicker>
-      <mat-error
-        *ngIf="
-          filtersForm
-            .get('releases')
-            .get('releaseTo')
-            .hasError('matDatepickerParse')
-        "
+        <mat-form-field color="accent" appearance="fill">
+          <mat-label>Release date to</mat-label>
+          <input
+            matInput
+            [matDatepicker]="pickerTo"
+            formControlName="releaseTo"
+          />
+          <mat-datepicker-toggle
+            matSuffix
+            [for]="pickerTo"
+          ></mat-datepicker-toggle>
+          <mat-datepicker #pickerTo startView="multi-year"></mat-datepicker>
+          <mat-error
+            *ngIf="
+              filtersForm
+                .get('releases')
+                .get('releaseTo')
+                .hasError('matDatepickerParse')
+            "
+          >
+            Date must be in format: YYYY-MM-DD
+          </mat-error>
+        </mat-form-field>
+      </div>
+
+      <div
+        id="buttons"
+        *ngIf="filtersForm.touched && filtersForm.valid; else disabled"
       >
-        Date must be in format: YYYY-MM-DD
-      </mat-error>
-    </mat-form-field>
-  </div>
+        <button type="submit" mat-button color="accent">Accept filters</button>
 
-  <div
-    id="buttons"
-    *ngIf="filtersForm.touched && filtersForm.valid; else disabled"
-  >
-    <button type="submit" mat-button color="accent">Accept filters</button>
-
-    <button
-      type="submit"
-      mat-button
-      color="warn"
-      (click)="resetFilters()"
-      *ngIf="showResetButton"
-    >
-      Reset filters
-    </button>
-  </div>
-  <ng-template #disabled>
-    <button mat-button disabled>Accept filters</button>
-  </ng-template>
-</form>
+        <button
+          type="submit"
+          mat-button
+          color="warn"
+          (click)="resetFilters()"
+          *ngIf="showResetButton"
+        >
+          Reset filters
+        </button>
+      </div>
+      <ng-template #disabled>
+        <button mat-button disabled>Accept filters</button>
+      </ng-template>
+    </form>
+  </mat-drawer>
+</mat-drawer-container>
