--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
     <header>
-        <app-header (burgerClicked)="showNav()"></app-header>
+        <app-header></app-header>
     </header>
     <main>
         <div id="sidebar">
