--- a/src/app/authors/components/authors/authors.component.html
+++ b/src/app/authors/components/authors/authors.component.html
@@ -1,35 +1,40 @@
-<div id="authors" >
-
+<div id="authors">
   <mat-spinner *ngIf="loadingPage"></mat-spinner>
 
-    <div id="tableContent" [class.show]="!loadingPage">
-      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 data-table">
+  <div id="tableContent" [class.show]="!loadingPage">
+    <table
+      mat-table
+      [dataSource]="dataSource"
+      matSort
+      class="mat-elevation-z8 data-table"
+    >
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
+        <td mat-cell *matCellDef="let author">{{ author.id }}</td>
+      </ng-container>
 
-          <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> # </th>
-            <td mat-cell *matCellDef="let author"> {{author.id}} </td>
-          </ng-container>
-        
-          <ng-container matColumnDef="first_name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> FIRSTNAME </th>
-            <td mat-cell *matCellDef="let author"> {{author.first_name}} </td>
-          </ng-container>
-        
-          <ng-container matColumnDef="last_name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> LASTNAME </th>
-            <td mat-cell *matCellDef="let author"> {{author.last_name}} </td>
-          </ng-container>
-          
-          <tr mat-header-row *matHeaderRowDef="displayedColumns, sticky: true" ></tr>
-          <tr mat-row *matRowDef="let author; columns: displayedColumns;" 
-          [routerLink]="['/author', author.id]"></tr>
-      </table>
+      <ng-container matColumnDef="first_name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>FIRSTNAME</th>
+        <td mat-cell *matCellDef="let author">{{ author.first_name }}</td>
+      </ng-container>
 
-      <app-paginator 
-      [records]="authorsQuantity" 
-      [limits]='[10, 25, 50]' 
-      (create)="takePaginator($event)"></app-paginator>
+      <ng-container matColumnDef="last_name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>LASTNAME</th>
+        <td mat-cell *matCellDef="let author">{{ author.last_name }}</td>
+      </ng-container>
 
-    </div>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr
+        mat-row
+        *matRowDef="let author; columns: displayedColumns"
+        [routerLink]="['/author', author.id]"
+      ></tr>
+    </table>
+
+    <app-paginator
+      [records]="authorsQuantity"
+      [limits]="[10, 25, 50]"
+      (create)="takePaginator($event)"
+    ></app-paginator>
+  </div>
 </div>
-
