--- a/src/app/books/components/books/books.component.scss
+++ b/src/app/books/components/books/books.component.scss
@@ -7,39 +7,49 @@
   mat-spinner {
     align-self: center;
   }
+
   app-books-content {
     display: flex;
     flex-flow: row wrap;
   }
+
   app-paginator {
     width: 80%;
   }
 }
+
 #content {
   display: flex;
   height: 92%;
 }
+
 #viewBooks {
   height: 100%;
   width: 100%;
   overflow: auto;
-  .spinner{
+
+  .spinner {
     height: 92%;
     display: flex;
     justify-content: center;
   }
 }
-#nfBooks{
+
+#nfBooks {
   width: 100%;
   height: 80%;
   display: flex;
-  flex-direction: column;;
+  flex-direction: column;
+  ;
   justify-content: center;
   align-items: center;
-  h2{
-    color: #fff;;
+
+  h2 {
+    color: #fff;
+    ;
   }
 }
-.hide{
+
+.hide {
   visibility: hidden;
 }
