--- a/src/app/books/components/search-field/search-field.component.html
+++ b/src/app/books/components/search-field/search-field.component.html
@@ -1,4 +1,4 @@
 <mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input matInput placeholder="Ex. ium" #input>
+  <mat-label>Filter</mat-label>
+  <input matInput placeholder="Ex. ium" #input />
 </mat-form-field>
