--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -3,7 +3,12 @@
     <mat-icon>menu</mat-icon>
   </button>
   <h1>My Books</h1>
-  <button mat-icon-button *ngIf="booksPageIcon" (click)="showBooksFilters()" class="example-icon">
+  <button
+    mat-icon-button
+    *ngIf="booksPageIcon"
+    (click)="showBooksFilters()"
+    class="example-icon"
+  >
     <mat-icon>filter_list</mat-icon>
   </button>
 </mat-toolbar>
