--- a/src/app/layout/paginator/paginator.component.html
+++ b/src/app/layout/paginator/paginator.component.html
@@ -1,5 +1,6 @@
-<mat-paginator 
-    [length]="records" 
-    [pageSizeOptions]="limits" 
-    showFirstLastButtons 
-    (page)="changedSize($event)"></mat-paginator>
+<mat-paginator
+  [length]="records"
+  [pageSizeOptions]="limits"
+  showFirstLastButtons
+  (page)="changedSize($event)"
+></mat-paginator>
