--- a/src/app/books/components/filters/filters.component.html
+++ b/src/app/books/components/filters/filters.component.html
@@ -12,13 +12,13 @@
       <div formGroupName="prices">
         <mat-form-field class="example-full-width">
           <mat-label>Price from</mat-label>
-          <input type="number" matInput formControlName="price_gt" />
+          <input type="number" matInput formControlName="minPrice" />
           <mat-error
-            *ngIf="filtersForm.get('prices').get('price_gt').hasError('min')">
+            *ngIf="filtersForm.get('prices').get('minPrice').hasError('min')">
             Price could not be a negative
           </mat-error>
           <mat-error *ngIf="
-              filtersForm.get('prices').get('price_gt').hasError('priceError')
+              filtersForm.get('prices').get('minPrice').hasError('priceError')
             ">
             Minimal price could not be biggest than maximal
           </mat-error>
@@ -26,9 +26,9 @@
 
         <mat-form-field class="example-full-width">
           <mat-label>Price to</mat-label>
-          <input type="number" matInput formControlName="price_lt" />
+          <input type="number" matInput formControlName="maxPrice" />
           <mat-error
-            *ngIf="filtersForm.get('prices').get('price_lt').hasError('min')">
+            *ngIf="filtersForm.get('prices').get('maxPrice').hasError('min')">
             Price could not be a negative
           </mat-error>
         </mat-form-field>
@@ -38,14 +38,14 @@
         <mat-form-field color="accent" appearance="fill">
           <mat-label>Release date from</mat-label>
           <input matInput [matDatepicker]="pickerFrom"
-            formControlName="release_date_gt" />
+            formControlName="releaseDateFrom" />
           <mat-datepicker-toggle matSuffix [for]="pickerFrom">
           </mat-datepicker-toggle>
           <mat-datepicker #pickerFrom startView="multi-year"></mat-datepicker>
           <mat-error *ngIf="
               filtersForm
                 .get('releases')
-                .get('release_date_gt')
+                .get('releaseDateFrom')
                 .hasError('releaseError')
             ">
             First release date could not be biggest than second
@@ -53,7 +53,7 @@
           <mat-error *ngIf="
               filtersForm
                 .get('releases')
-                .get('release_date_gt')
+                .get('releaseDateFrom')
                 .hasError('matDatepickerParse')
             ">
             Date must be in format: YYYY-MM-DD
@@ -63,14 +63,14 @@
         <mat-form-field color="accent" appearance="fill">
           <mat-label>Release date to</mat-label>
           <input matInput [matDatepicker]="pickerTo"
-            formControlName="release_date_lt" />
+            formControlName="releaseDateTo" />
           <mat-datepicker-toggle matSuffix [for]="pickerTo">
           </mat-datepicker-toggle>
           <mat-datepicker #pickerTo startView="multi-year"></mat-datepicker>
           <mat-error *ngIf="
               filtersForm
                 .get('releases')
-                .get('release_date_lt')
+                .get('releaseDateTo')
                 .hasError('matDatepickerParse')
             ">
             Date must be in format: YYYY-MM-DD
