--- a/src/app/authors/components/authors/authors.component.html
+++ b/src/app/authors/components/authors/authors.component.html
@@ -1,13 +1,8 @@
 <div id="authors">
-  <mat-spinner *ngIf="loadingPage"></mat-spinner>
 
-  <div id="tableContent" [class.show]="!loadingPage">
-    <table
-      mat-table
-      [dataSource]="dataSource"
-      matSort
-      class="mat-elevation-z8 data-table"
-    >
+  <div id="tableContent">
+    <table mat-table [dataSource]="dataSource" matSort
+      class="mat-elevation-z8 data-table">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
         <td mat-cell *matCellDef="let author">{{ author.id }}</td>
@@ -24,17 +19,11 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-      <tr
-        mat-row
-        *matRowDef="let author; columns: displayedColumns"
-        [routerLink]="['/author', author.id]"
-      ></tr>
+      <tr mat-row *matRowDef="let author; columns: displayedColumns"
+        [routerLink]="['/author', author.id]"></tr>
     </table>
 
-    <app-paginator
-      [records]="authorsQuantity"
-      [limits]="[10, 25, 50]"
-      (create)="takePaginator($event)"
-    ></app-paginator>
+    <app-paginator [records]="authors.length" [limits]="[10, 25, 50]"
+      (create)="takePaginator($event)"></app-paginator>
   </div>
 </div>
