Feat.(app-module): remake books to c-c-v

--- a/src/app/authors/containers/authors/authors.container.html
+++ b/src/app/authors/containers/authors/authors.container.html
@@ -1,8 +1,8 @@
-<authors-component *ngIf="authors$ | async as authors; else loadingBlock"
+<authors-component *ngIf="authors$ | async as authors; else loading"
     [authors]="authors">
 </authors-component>
 
-<ng-template #loadingBlock>
+<ng-template #loading>
     <div id="spinner">
         <mat-spinner></mat-spinner>
     </div>
