--- a/src/app/book/components/book/book.component.scss
+++ b/src/app/book/components/book/book.component.scss
@@ -1,5 +1,5 @@
 #bookDetails {
-  height: 99vh;
+  height: 92%;
 
   h1,
   h2,
@@ -12,10 +12,4 @@
     font-size: 16px;
     margin: 0 20px;
   }
-}
-
-mat-spinner {
-  position: absolute;
-  top: 47%;
-  left: 47%;
 }
