--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,10 @@
+@mixin spinner-align {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 header {
     position: relative;
     z-index: 102;
