--- a/src/app/books/components/books/books.component.html
+++ b/src/app/books/components/books/books.component.html
@@ -1,32 +1,2 @@
-<div id="books">
-  <app-search-field></app-search-field>
-
-  <div id="content">
-    <div id="viewBooks">
-      <app-books-content *ngIf="books$ | async as books; else loading"
-        [books]="books">
-      </app-books-content>
-
-      <ng-template #loading>
-        <div class="spinner">
-          <mat-spinner></mat-spinner>
-        </div>
-      </ng-template>
-
-      <app-paginator [records]="booksQuantity"
-        [limits]="[10, 25, 50, 75, 100, 125, 150]"
-        (changed)="changePageSize($event)" [class.hide]="emptyResult">
-      </app-paginator>
-      <div id="nfBooks" *ngIf="emptyResult">
-        <h2>Books not found</h2>
-        <button mat-stroked-button color="warn" (click)="resetFilters()">
-          Reset filters
-        </button>
-      </div>
-    </div>
-
-    <app-filters *ngIf="genres$ | async as genres" [genres]="genres"
-      (applyForm)="getFilteredBooks($event)" (resetForm)="resetFilters()">
-    </app-filters>
-  </div>
-</div>
+<app-book-item *ngFor="let book of books" [book]="book">
+</app-book-item>
