Feat.(app-module): refactor project

--- a/src/app/book/components/book/book.component.html
+++ b/src/app/book/components/book/book.component.html
@@ -12,9 +12,9 @@
                     
                     Genres: {{ book.genres | comma }}
     
-                    Writing date: {{ book?.writing_date | date: "dd MMMM yyyy" }} 
+                    Writing date: {{ book.writing_date | date: "dd MMMM yyyy" }} 
     
-                    Release date: {{ book?.release_date | date: "dd MMMM yyyy" }} 
+                    Release date: {{ book.release_date | date: "dd MMMM yyyy" }} 
         </pre>
       </mat-grid-tile>
       <mat-grid-tile col="2">
