--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,13 +6,14 @@
 }
 
 header {
-    position: relative;
+    position: fixed;
+    width: 100%;
     z-index: 102;
 }
 
 main {
     position: relative;
-    height: 92%;
+    height: 100%;
 
     #sidebar {
         position: absolute;
