--- a/src/app/book/views/book/book.view.html
+++ b/src/app/book/views/book/book.view.html
@@ -1,2 +1,2 @@
-<book-container [queryId]="queryId$ | async" (nfContent)="show404()">
+<book-container [queryId]="queryId$ | async" (contentNotFound)="show404()">
 </book-container>
