--- a/src/app/books/containers/books/books.container.html
+++ b/src/app/books/containers/books/books.container.html
@@ -1,22 +1,23 @@
 <div id="books">
-    <app-search-field></app-search-field>
-
     <div id="content">
         <div id="viewBooks">
-            <books-component *ngIf="books$ | async as books; else loading"
-                [books]="books">
-            </books-component>
+
+            <ng-container *ngIf="books$ | async as books; else loading">
+                <books-component [books]="books">
+                </books-component>
+                <app-paginator [records]="booksQuantity"
+                    [limits]="[10, 25, 50, 75, 100, 125, 150]"
+                    (changed)="changePageSize($event)"
+                    [class.hide]="emptyResult">
+                </app-paginator>
+            </ng-container>
 
             <ng-template #loading>
-                <div class="spinner">
+                <div id="spinner">
                     <mat-spinner></mat-spinner>
                 </div>
             </ng-template>
 
-            <app-paginator [records]="booksQuantity"
-                [limits]="[10, 25, 50, 75, 100, 125, 150]"
-                (changed)="changePageSize($event)" [class.hide]="emptyResult">
-            </app-paginator>
             <div id="nfBooks" *ngIf="emptyResult">
                 <h2>Books not found</h2>
             </div>
