--- a/src/app/books/containers/filters/filters.container.scss
+++ b/src/app/books/containers/filters/filters.container.scss
@@ -1,5 +1,9 @@
 mat-drawer-container {
     height: 100%;
+    position: fixed;
+    top: 55px;
+    right: 0;
+    z-index: 101;
 
     mat-drawer {
         background-color: #303030;
