--- a/src/app/books/containers/books/books.container.scss
+++ b/src/app/books/containers/books/books.container.scss
@@ -1,47 +1,36 @@
-@import '../../../app.component.scss';
+@import "../../../app.component.scss";
 
 #books {
-    height: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  min-height: 100%;
+  padding-top: 55px;
+
+  books-component {
     display: flex;
-    flex-flow: column;
+    flex-flow: row wrap;
     justify-content: center;
+  }
 
-    books-component {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-    }
-
-    app-paginator {
-        width: 80%;
-    }
-}
-
-#content {
-    display: flex;
-}
-
-#viewBooks {
-    width: 100%;
-
-    #spinner {
-        @include spinner-align
-    }
+  #spinner {
+    @include spinner-align;
+  }
 }
 
 #nfBooks {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-    h2 {
-        color: #fff;
-    }
+  h2 {
+    color: #fff;
+  }
 }
 
 .hide {
-    visibility: hidden;
+  visibility: hidden;
 }
