--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,4 +9,7 @@ body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
     background-color: #303030;
+    .cdk-overlay-pane{
+        width: max-content !important;
+    }
 }
