Feat.(app-module): refactoring header

--- a/src/app/books/containers/filters/filters.container.html
+++ b/src/app/books/containers/filters/filters.container.html
@@ -1,5 +1,5 @@
-<mat-drawer-container class="example-container">
-    <mat-drawer class="example-sidenav" mode="side" position="end">
+<mat-drawer-container class="example-container" hasBackdrop="true" [class.hide]="!drawer?.opened">
+    <mat-drawer class="example-sidenav" mode="side" position="end" (openedChange)="changeFilDrawer($event)">
         <filters-component [genres]="genres"
             (applyForm)="applyForm.emit($event)" (resetForm)="resetForm.emit()">
         </filters-component>
