--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -6,7 +6,7 @@
   <app-search></app-search>
   <button
     mat-icon-button
-    *ngIf="booksPageIcon"
+    *ngIf="filtersIcon"
     (click)="showBooksFilters()"
     class="example-icon"
   >
