--- a/src/app/books/containers/filters/filters.container.scss
+++ b/src/app/books/containers/filters/filters.container.scss
@@ -1,11 +1,17 @@
 mat-drawer-container {
-    height: 100%;
     position: fixed;
     top: 55px;
     right: 0;
-    z-index: 101;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background: none;
 
     mat-drawer {
         background-color: #303030;
     }
+}
+.hide{
+    transition: .5s;
+    z-index: -1;
 }
