--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,8 +8,10 @@ body {
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    background-color: #303030;
     .cdk-overlay-pane{
         width: max-content !important;
     }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
