--- a/src/app/books/components/filters/filters.component.scss
+++ b/src/app/books/components/filters/filters.component.scss
@@ -3,11 +3,6 @@ form {
   flex-flow: column wrap;
   margin: 10px;
 
-  mat-form-field {
-    width: 100%;
-    color: #ffffff;
-  }
-
   mat-card {
     width: max-content;
     height: max-content;
@@ -25,5 +20,23 @@ form {
   #buttons {
     display: flex;
     flex-direction: column;
+  }
+}
+mat-expansion-panel {
+  mat-panel-description {
+    justify-content: flex-end;
+  }
+  mat-form-field {
+    width: 100%;
+    margin: 0 8px;
+  }
+}
+
+
+@media (min-width: 1430px) {
+  mat-expansion-panel {
+    mat-form-field {
+      width: 45%;
+    }
   }
 }
