--- a/src/app/books/containers/filters/filters.container.scss
+++ b/src/app/books/containers/filters/filters.container.scss
@@ -6,9 +6,9 @@ mat-drawer-container {
     width: 100%;
     height: 100%;
     background: none;
-
-    mat-drawer {
-        background-color: #303030;
+    
+    mat-drawer{
+        width: 30%;
     }
 }
 .hide{
