Feat.(app-module): microfix

--- a/src/app/books/components/filters/filters.component.html
+++ b/src/app/books/components/filters/filters.component.html
@@ -14,7 +14,7 @@
           Prices
         </mat-panel-title>
         <mat-panel-description>
-          <mat-icon>date_range</mat-icon>
+          <mat-icon>payment</mat-icon>
         </mat-panel-description>
       </mat-expansion-panel-header>
 
