--- a/src/app/not-found/components/not-found/not-found.component.scss
+++ b/src/app/not-found/components/not-found/not-found.component.scss
@@ -1,6 +1,6 @@
 $shadow : #8153a321;
-$bgColor: #5d84c3;
-$ribbonColor:	#8153a3;
+$bgColor:#3f51b5;
+$ribbonColor:	#3f51b5;
 
 html{	background-color:$bgColor; }
 
@@ -61,10 +61,8 @@ body {
 h1 {
   margin-top: 2rem;
   text-align: center;
-  color: #fff;
 }
 h1 + p {
-  color: #fff;
   text-align: center;
 }
 .shelf {
@@ -74,7 +72,7 @@ h1 + p {
   margin: 0 auto;
   border: 0.5rem solid $ribbonColor;
   border-radius: 0.5rem;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgb(39, 53, 65);
   perspective: 130rem;
   box-shadow: inset 0 0 2rem rgba(0, 0, 0, 0.2);
 }
