--- a/src/app/register/containers/register/register.container.scss
+++ b/src/app/register/containers/register/register.container.scss
@@ -1,5 +1,6 @@
 register-component{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
