--- a/src/app/register/components/register/register.component.html
+++ b/src/app/register/components/register/register.component.html
@@ -1,15 +1,14 @@
 <h1>Registration in 3 steps</h1>
-<mat-horizontal-stepper linear="true" #stepper>
+<mat-horizontal-stepper linear="false" #stepper>
   <mat-step [stepControl]="firstFormGroup">
     <form [formGroup]="firstFormGroup">
       <ng-template matStepLabel>Fill out your information</ng-template>
       <mat-form-field>
         <mat-label>Firstname</mat-label>
         <input
-          formControlName="firstNameCtl"
-          notDigits
-          [control]="firstFormGroup.controls['firstNameCtl']"
           matInput
+          notDigits
+          formControlName="firstNameCtl"
           placeholder="John"
           required
         />
@@ -17,10 +16,9 @@
       <mat-form-field>
         <mat-label>Lastname</mat-label>
         <input
-          formControlName="lastNameCtl"
-          notDigits
-          [control]="firstFormGroup.controls['lastNameCtl']"
           matInput
+          notDigits
+          formControlName="lastNameCtl"
           placeholder="Prison"
           required
         />
@@ -37,14 +35,11 @@
       <mat-form-field>
         <mat-label>Phone number</mat-label>
         <input
-          id="tel"
-          formControlName="phoneNumberCtl"
           matInput
           phoneMask
-          [preValue]="firstFormGroup.value.phoneNumberCtl"
-          [phoneControl]="firstFormGroup.controls['phoneNumberCtl']"
-          maxlength="14"
-          placeholder="(123) 456-6789"
+          formControlName="phoneNumberCtl"
+          maxlength="17"
+          placeholder="+1(234) 567-89-01"
           required
         />
       </mat-form-field>
@@ -59,10 +54,9 @@
         <input
           matInput
           notDigits
-          [control]="secondFormGroup.controls['countryCtl']"
-          placeholder="Country"
+          placeholder="Country name"
           [matAutocomplete]="auto"
-          [formControl]="secondFormGroup.controls['countryCtl']"
+          [formControl]="country"
           required
         />
         <mat-autocomplete #auto="matAutocomplete">
@@ -102,10 +96,9 @@
       <mat-form-field>
         <mat-label>Card number</mat-label>
         <input
-          cardNumberMask
-          [control]="thirdFormGroup.controls['cardNumberCtl']"
-          formControlName="cardNumberCtl"
           matInput
+          cardNumberMask
+          formControlName="cardNumberCtl"
           maxlength="19"
           placeholder="1234 5678 9012 3456"
           required
@@ -114,10 +107,9 @@
       <div id="cardInf">
         <mat-form-field>
           <input
-            cardDateMask
-            [control]="thirdFormGroup.controls['cardExpiryDateCtl']"
-            formControlName="cardExpiryDateCtl"
             matInput
+            cardDateMask
+            formControlName="cardExpiryDateCtl"
             placeholder="MM/YY"
             maxlength="5"
             required
@@ -126,10 +118,9 @@
         <mat-form-field>
           <input
             type="password"
-            cardNumberMask
-            [control]="thirdFormGroup.controls['cardCVVCtl']"
-            formControlName="cardCVVCtl"
             matInput
+            cardNumberMask
+            formControlName="cardCVVCtl"
             placeholder="CVV"
             maxlength="3"
             required
