Feat.(app-module): fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </header>
 <main>
   <div id="sidebar">
-    <app-sidebar></app-sidebar>
+    <sidebar-view></sidebar-view>
   </div>
   <router-outlet></router-outlet>
 </main>
