--- a/src/app/layout/components/paginator/paginator.component.html
+++ b/src/app/layout/components/paginator/paginator.component.html
@@ -1,6 +1,7 @@
 <mat-paginator
   [length]="records"
   [pageSizeOptions]="limits"
+  [pageIndex]="index"
   showFirstLastButtons
   (page)="changedSize($event)"
 ></mat-paginator>
