--- a/src/app/layout/containers/header/header.container.html
+++ b/src/app/layout/containers/header/header.container.html
@@ -1,5 +1,5 @@
 <header-component 
-    [urlStream$]="urlStream$"
+    [isBooksPage]="isBooksPage"
     (burgerClicked)="changeSbStatus()"
     (filtersClicked)="changeFilStatus()"
 ></header-component>
